--- a/Assignment 10/Task 2 weather-app/weather-app/package.json
+++ b/Assignment 10/Task 2 weather-app/weather-app/package.json
@@ -9,9 +9,11 @@
     "react": "^18.2.0",
     "react-accessible-accordion": "^5.0.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "^2.1.3",
+    "react-redux": "^8.0.5",
+    "react-scripts": "^5.0.1",
     "react-select": "^5.6.1",
-    "react-select-async-paginate": "^0.6.1",
+    "react-select-async-paginate": "^0.6.2",
+    "redux": "^4.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
